# kminer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
algos/zcash/: JoinSplit.hpp  Note.hpp  NoteEncryption.hpp  Zcash.h
blake2/: blake2bx.cpp
cpu_tromp/blake2/: blake2.h
cpu_xenoncat/: cpu_xenoncat.hpp  xenoncat.cpp
cuda_djezo/: CMakeLists.txt  LICENSE  cuda_djezo.cpp  cuda_djezo.hpp  eqcuda.hpp  equi_miner.cu
cuda_tromp/: CMakeLists.txt
kminer/: AvailableSolvers.h  COPYING  ISolver.h  MinerFactory.cpp  MinerFactory.h  SolverStub.h  amount.cpp  api.cpp  arith_uint256.h  hash.h  main.cpp  serialize.h  speed.cpp  speed.hpp  streams.h  tinyformat.h  uint252.h  uint256.cpp  utilstrencodings.cpp  utilstrencodings.h  version.h
kminer/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
kminer/crypto/: sha256.cpp  sha256.h
kminer/libstratum/: ZcashStratum.cpp  ZcashStratum.h
kminer/primitives/: block.cpp  block.h  transaction.h
kminer/script/: script.cpp  script.h  script_error.cpp  script_error.h  sign.h
kminer/support/: pagelocker.cpp
kminer/support/allocators/: secure.h  zeroafterfree.h
kminer/zcash/: Address.cpp  Address.hpp  GenerateParams.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  Note.cpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.cpp  Proof.hpp  prf.cpp  prf.h  util.cpp  util.h
nheqminer/: AvailableSolvers.h  ISolver.h  MinerFactory.cpp  MinerFactory.h  Note.cpp  Solver.h  SolverStub.h  amount.cpp  amount.h  api.cpp  api.hpp  arith_uint256.cpp  arith_uint256.h  hash.h  main.cpp  serialize.h  speed.cpp  streams.h  tinyformat.h  uint252.h  uint256.cpp  uint256.h  utilstrencodings.cpp  utilstrencodings.h  version.h
nheqminer/compat/: endian.h
nheqminer/crypto/: common.h  ripemd160.cpp  ripemd160.h
nheqminer/json/: LICENSE.MIT  json_spirit.h  json_spirit_error_position.h  json_spirit_reader.cpp  json_spirit_reader.h  json_spirit_reader_template.h  json_spirit_stream_reader.h  json_spirit_utils.h  json_spirit_value.cpp  json_spirit_value.h  json_spirit_writer.cpp  json_spirit_writer.h  json_spirit_writer_template.h
nheqminer/libstratum/: StratumClient.cpp  StratumClient.h  ZcashStratum.cpp  ZcashStratum.h
nheqminer/primitives/: transaction.cpp
nheqminer/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  script.h  sigcache.cpp  sigcache.h  sign.cpp  standard.cpp  standard.h
nheqminer/support/: pagelocker.cpp  pagelocker.h
nheqminer/zcash/: Address.cpp  Address.hpp  GenerateParams.cpp  IncrementalMerkleTree.cpp  IncrementalMerkleTree.hpp  JoinSplit.cpp  JoinSplit.hpp  Note.cpp  Note.hpp  NoteEncryption.cpp  NoteEncryption.hpp  Proof.cpp  Proof.hpp  Zcash.h  prf.cpp  prf.h  util.cpp  util.h
solvers/cuda_djezo/: eqcuda.hpp  equi_miner.cu
